HW/Graphic/maxpool_CIF_0_1/maxPool_CIF_0_1/solution1/.autopilot/db/maxPool_1.pp.0.cpp.clang-tidy.loop-label.out.log
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\maxpool_CIF_0_1\maxPool_CIF_0_1\solution1\.autopilot\db\maxPool_1.pp.0.cpp:1447:7: warning: Added loop label VITIS_LOOP_1207_1:   [xilinx-label-all-loops]
      for (i = 0; i < __N - 1; ++i) {
      ^~~
      VITIS_LOOP_1207_1: 
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\maxpool_CIF_0_1\maxPool_CIF_0_1\solution1\.autopilot\db\maxPool_1.pp.0.cpp:1447:7: note: FIX-IT applied suggested code changes
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\maxpool_CIF_0_1\maxPool_CIF_0_1\solution1\.autopilot\db\maxPool_1.pp.0.cpp:2421:5: warning: Added loop label VITIS_LOOP_676_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_676_1: 
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\maxpool_CIF_0_1\maxPool_CIF_0_1\solution1\.autopilot\db\maxPool_1.pp.0.cpp:2421:5: note: FIX-IT applied suggested code changes
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\maxpool_CIF_0_1\maxPool_CIF_0_1\solution1\.autopilot\db\maxPool_1.pp.0.cpp:2435:5: warning: Added loop label VITIS_LOOP_690_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_690_1: 
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\maxpool_CIF_0_1\maxPool_CIF_0_1\solution1\.autopilot\db\maxPool_1.pp.0.cpp:2435:5: note: FIX-IT applied suggested code changes
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\maxpool_CIF_0_1\maxPool_CIF_0_1\solution1\.autopilot\db\maxPool_1.pp.0.cpp:2449:5: warning: Added loop label VITIS_LOOP_704_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_704_1: 
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\maxpool_CIF_0_1\maxPool_CIF_0_1\solution1\.autopilot\db\maxPool_1.pp.0.cpp:2449:5: note: FIX-IT applied suggested code changes
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\maxpool_CIF_0_1\maxPool_CIF_0_1\solution1\.autopilot\db\maxPool_1.pp.0.cpp:4078:7: warning: Added loop label VITIS_LOOP_1247_1:   [xilinx-label-all-loops]
      for (i = 0; i < __N - 1; ++i) {
      ^~~
      VITIS_LOOP_1247_1: 
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\maxpool_CIF_0_1\maxPool_CIF_0_1\solution1\.autopilot\db\maxPool_1.pp.0.cpp:4078:7: note: FIX-IT applied suggested code changes
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\maxpool_CIF_0_1\maxPool_CIF_0_1\solution1\.autopilot\db\maxPool_1.pp.0.cpp:9814:9: error: Resource with core_name: RAM_2P_LUTRAM pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=buf core=RAM_2P_LUTRAM
        ^
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\maxpool_CIF_0_1\maxPool_CIF_0_1\solution1\.autopilot\db\maxPool_1.pp.0.cpp:9816:9: error: Resource with core_name: RAM_2P_LUTRAM pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=acc core=RAM_2P_LUTRAM
        ^
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\maxpool_CIF_0_1\maxPool_CIF_0_1\solution1\.autopilot\db\maxPool_1.pp.0.cpp:9817:2: warning: Added loop label VITIS_LOOP_139_1:   [xilinx-label-all-loops]
 for(unsigned int j = 0; j < 32; j++){
 ^~~
 VITIS_LOOP_139_1: 
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\maxpool_CIF_0_1\maxPool_CIF_0_1\solution1\.autopilot\db\maxPool_1.pp.0.cpp:9817:2: note: FIX-IT applied suggested code changes
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\maxpool_CIF_0_1\maxPool_CIF_0_1\solution1\.autopilot\db\maxPool_1.pp.0.cpp:9818:3: warning: Added loop label VITIS_LOOP_140_2:   [xilinx-label-all-loops]
  for(unsigned int i = 0; i < 32 / 2; i++) {
  ^~~
  VITIS_LOOP_140_2: 
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\maxpool_CIF_0_1\maxPool_CIF_0_1\solution1\.autopilot\db\maxPool_1.pp.0.cpp:9818:3: note: FIX-IT applied suggested code changes
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\maxpool_CIF_0_1\maxPool_CIF_0_1\solution1\.autopilot\db\maxPool_1.pp.0.cpp:9824:2: warning: Added loop label VITIS_LOOP_146_3:   [xilinx-label-all-loops]
 for(unsigned int j = 0; j < 32; j++){
 ^~~
 VITIS_LOOP_146_3: 
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\maxpool_CIF_0_1\maxPool_CIF_0_1\solution1\.autopilot\db\maxPool_1.pp.0.cpp:9824:2: note: FIX-IT applied suggested code changes
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\maxpool_CIF_0_1\maxPool_CIF_0_1\solution1\.autopilot\db\maxPool_1.pp.0.cpp:9833:3: warning: Added loop label VITIS_LOOP_155_4:   [xilinx-label-all-loops]
  for (unsigned int num_img = 0; num_img < batch_size; num_img++){
  ^~~
  VITIS_LOOP_155_4: 
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\maxpool_CIF_0_1\maxPool_CIF_0_1\solution1\.autopilot\db\maxPool_1.pp.0.cpp:9833:3: note: FIX-IT applied suggested code changes
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\maxpool_CIF_0_1\maxPool_CIF_0_1\solution1\.autopilot\db\maxPool_1.pp.0.cpp:9834:4: warning: Added loop label VITIS_LOOP_156_5:   [xilinx-label-all-loops]
   for (unsigned int yp = 0; yp < pool_out_bound; yp++) {
   ^~~
   VITIS_LOOP_156_5: 
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\maxpool_CIF_0_1\maxPool_CIF_0_1\solution1\.autopilot\db\maxPool_1.pp.0.cpp:9834:4: note: FIX-IT applied suggested code changes
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\maxpool_CIF_0_1\maxPool_CIF_0_1\solution1\.autopilot\db\maxPool_1.pp.0.cpp:9835:5: warning: Added loop label VITIS_LOOP_157_6:   [xilinx-label-all-loops]
    for (unsigned int ky = 0; ky < 2; ky++) {
    ^~~
    VITIS_LOOP_157_6: 
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\maxpool_CIF_0_1\maxPool_CIF_0_1\solution1\.autopilot\db\maxPool_1.pp.0.cpp:9835:5: note: FIX-IT applied suggested code changes
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\maxpool_CIF_0_1\maxPool_CIF_0_1\solution1\.autopilot\db\maxPool_1.pp.0.cpp:9836:6: warning: Added loop label VITIS_LOOP_158_7:   [xilinx-label-all-loops]
     for (unsigned int xp = 0; xp < pool_out_bound; xp++) {
     ^~~
     VITIS_LOOP_158_7: 
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\maxpool_CIF_0_1\maxPool_CIF_0_1\solution1\.autopilot\db\maxPool_1.pp.0.cpp:9836:6: note: FIX-IT applied suggested code changes
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\maxpool_CIF_0_1\maxPool_CIF_0_1\solution1\.autopilot\db\maxPool_1.pp.0.cpp:9838:7: warning: Added loop label VITIS_LOOP_160_8:   [xilinx-label-all-loops]
      for (unsigned int kx = 0; kx < 2; kx++) {
      ^~~
      VITIS_LOOP_160_8: 
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\maxpool_CIF_0_1\maxPool_CIF_0_1\solution1\.autopilot\db\maxPool_1.pp.0.cpp:9838:7: note: FIX-IT applied suggested code changes
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\maxpool_CIF_0_1\maxPool_CIF_0_1\solution1\.autopilot\db\maxPool_1.pp.0.cpp:9839:8: warning: Added loop label VITIS_LOOP_161_9:   [xilinx-label-all-loops]
       for (unsigned int ch = 0; ch < IFMCH_curr; ch++){
       ^~~
       VITIS_LOOP_161_9: 
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\maxpool_CIF_0_1\maxPool_CIF_0_1\solution1\.autopilot\db\maxPool_1.pp.0.cpp:9839:8: note: FIX-IT applied suggested code changes
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\maxpool_CIF_0_1\maxPool_CIF_0_1\solution1\.autopilot\db\maxPool_1.pp.0.cpp:9849:7: warning: Added loop label VITIS_LOOP_171_10:   [xilinx-label-all-loops]
      for (unsigned int ch = 0; ch < 32; ch++){
      ^~~
      VITIS_LOOP_171_10: 
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\maxpool_CIF_0_1\maxPool_CIF_0_1\solution1\.autopilot\db\maxPool_1.pp.0.cpp:9849:7: note: FIX-IT applied suggested code changes
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\maxpool_CIF_0_1\maxPool_CIF_0_1\solution1\.autopilot\db\maxPool_1.pp.0.cpp:9863:5: warning: Added loop label VITIS_LOOP_185_11:   [xilinx-label-all-loops]
    for (unsigned int outpix = 0; outpix < pool_out_bound; outpix++) {
    ^~~
    VITIS_LOOP_185_11: 
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\maxpool_CIF_0_1\maxPool_CIF_0_1\solution1\.autopilot\db\maxPool_1.pp.0.cpp:9863:5: note: FIX-IT applied suggested code changes
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\maxpool_CIF_0_1\maxPool_CIF_0_1\solution1\.autopilot\db\maxPool_1.pp.0.cpp:9864:6: warning: Added loop label VITIS_LOOP_186_12:   [xilinx-label-all-loops]
     for (unsigned int outch = 0; outch < IFMCH_curr; outch++){
     ^~~
     VITIS_LOOP_186_12: 
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\maxpool_CIF_0_1\maxPool_CIF_0_1\solution1\.autopilot\db\maxPool_1.pp.0.cpp:9864:6: note: FIX-IT applied suggested code changes
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\maxpool_CIF_0_1\maxPool_CIF_0_1\solution1\.autopilot\db\maxPool_1.pp.0.cpp:9889:9: error: Resource with core_name: Mul_LUT pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=KER_size_0 core=Mul_LUT
        ^
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\maxpool_CIF_0_1\maxPool_CIF_0_1\solution1\.autopilot\db\maxPool_1.pp.0.cpp:9890:9: error: Resource with core_name: Mul_LUT pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=KER_size_1 core=Mul_LUT
        ^
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\maxpool_CIF_0_1\maxPool_CIF_0_1\solution1\.autopilot\db\maxPool_1.pp.0.cpp:9891:9: error: Resource with core_name: Mul_LUT pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=KER_bound core=Mul_LUT
        ^
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\maxpool_CIF_0_1\maxPool_CIF_0_1\solution1\.autopilot\db\maxPool_1.pp.0.cpp:9892:2: warning: Added loop label VITIS_LOOP_214_13:   [xilinx-label-all-loops]
 for(unsigned int i = 0; i < KER_bound; i++){
 ^~~
 VITIS_LOOP_214_13: 
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\maxpool_CIF_0_1\maxPool_CIF_0_1\solution1\.autopilot\db\maxPool_1.pp.0.cpp:9892:2: note: FIX-IT applied suggested code changes
